Improve ctrl keyboard accessibility

--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -1,10 +1,10 @@
 <div id="a$id" class="answer hglt pad br">
 	<div class="ctrl pad lft">
-		<a class="up" title="This answers the question well."><svg class="blk up" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,1 1,19 19,19" /></svg></a>
-		<a class="dn" title="This is not useful."><svg class="blk dn" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,19 1,1 19,1" /></svg></a>
-		<a class="fl" title="This answer has an issue that needs to be addressed."><svg class="blk fl" xmlns="http://www.w3.org/2000/svg" width="20" height="24"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a>
+		<a class="up" href="" title="This answers the question well."><svg class="blk up" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,1 1,19 19,19" /></svg></a>
+		<a class="dn" href="" title="This is not useful."><svg class="blk dn" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,19 1,1 19,1" /></svg></a>
+		<a class="fl" href="" title="This answer has an issue that needs to be addressed."><svg class="blk fl" xmlns="http://www.w3.org/2000/svg" width="20" height="24"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a>
 		<a class="ctrlicon editbtn" href="#edit-$id" title="Edit">✎</a>
-		<a class="ctrlicon delbtn" title="Delete">✕</a>
+		<a class="ctrlicon delbtn" href="" title="Delete">✕</a>
 	</div>
 	<div class="a-content">
 		<div class="a-body">$body-markdown</div>
