--- a/html/learn/debug/debug.html
+++ b/html/learn/debug/debug.html
@@ -1,2 +1,2 @@
 <h1>Debugging</h1>
-<a href="../" class="small">← Back to course listing</a>
+<a href=".." class="small">← Back to course listing</a>
