--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -17,7 +17,7 @@ Paragraphs - Basic Elements
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../../" class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="../.." class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
