--- a/html/learn/web/web.html
+++ b/html/learn/web/web.html
@@ -1,5 +1,5 @@
 <h1>Web Courses</h1>
-<a href="../" class="small">← Back to course listing</a>
+<a href=".." class="small">← Back to course listing</a>
 <div id="tree" class="clearfix umar">
 	<div id="tree-inner">
 		<div class="html-branch">
