--- a/html/learn/quality/quality.html
+++ b/html/learn/quality/quality.html
@@ -1,2 +1,2 @@
 <h1>Code Quality</h1>
-<a href="../" class="small">← Back to course listing</a>
+<a href=".." class="small">← Back to course listing</a>
