--- a/html/learn/ssj/ssj.html
+++ b/html/learn/ssj/ssj.html
@@ -1,2 +1,2 @@
 <h1>Server-side JavaScript</h1>
-<a href="../" class="small">← Back to course listing</a>
+<a href=".." class="small">← Back to course listing</a>
