Change punctuation on Q&A tips

--- a/html/qa/tips/tips.html
+++ b/html/qa/tips/tips.html
@@ -1,5 +1,5 @@
 <h1>Q&amp;A Tips</h1>
-<p>DevDoodle does Q&amp;A a bit different from other sites. It's important to understand the differences in our Q&amp;A model to be successful using it. Questions on DevDoodle must benefit a significant segment of the community, not just the asker, and answers must be detailed enough for the Q&amp;A pair to be a useful and lasting resource. Voting on questions and answers signals to DevDoodle which posts are useful and incentivizes creating high-quality content.</p>
+<p>DevDoodle does Q&amp;A a bit different from other sites — it's important to understand the differences in our Q&amp;A model to be successful using it. Questions on DevDoodle must benefit a significant segment of the community, not just the asker, and answers must be detailed enough for the Q&amp;A pair to be a useful and lasting resource. Voting on questions and answers signals to DevDoodle which posts are useful and incentivizes creating high-quality content.</p>
 <h2>Questions</h2>
 <p>When posting a question, make sure to think thru the problem yourself beforehand, then describe all that you know or have tried. Always err on the side of posting too much information — extraneous content is easily removed, while missing information is not easily added.</p>
 <ul>
