learn>web>basic-elements: div → p

--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -3,7 +3,7 @@ Paragraphs - Basic Elements
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
-			<div>In this lesson, we're going to start learning about basic content-formatting tags.</div>
+			<p>In this lesson, we're going to start learning about basic content-formatting tags.</p>
 			<h2>"P" is for Paragraph</h2>
 			<p>As we alreadly learned, body text can be put inside paragraph elements (wrapped in <code>&lt;p></code> and <code>&lt;/p></code>). It looks like this: </p>
 			<code class="blk">&lt;p>This is a paragraph.&lt;/p></code>
