non-working → nonworking

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -38,7 +38,7 @@
 		<label class="sumar">
 			This question is about
 			<select id="edit-type" name="type">
-				<option value="err">fixing non-working code</option>
+				<option value="err">fixing nonworking code</option>
 				<option value="bug">unexpected behavior in working code</option>
 				<option value="imp">improving working code</option>
 				<option value="how">how to achieve an end result</option>
