--- a/html/a/head.html
+++ b/html/a/head.html
@@ -12,7 +12,7 @@
 		<script src="/a/main.js"></script>
 		<title>$title</title>
 	</head>
-	<body>
+	<body vocab="https://schema.org/">
 		<noscript>JavaScript is required to view this site.</noscript>
 		<nav id="nav">
 			<div>
