--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -8,15 +8,15 @@
 		<div id="left" data-view="html">
 			<div id="html-cont" class="ta-cont">
 				<textarea id="html" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
-				<code id="html-display" class="code-display"></code>
+				<code id="html-display" class="code-display" property="codeSampleType"></code>
 			</div>
 			<div id="css-cont" class="ta-cont">
 				<textarea id="css" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="CSS">$css</textarea>
-				<code id="css-display" class="code-display"></code>
+				<code id="css-display" class="code-display" property="codeSampleType"></code>
 			</div>
 			<div id="js-cont" class="ta-cont">
 				<textarea id="js" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="JS">$js</textarea>
-				<code id="js-display" class="code-display"></code>
+				<code id="js-display" class="code-display" property="codeSampleType"></code>
 			</div>
 		</div>
 	</div>
