--- a/html/dev/text.html
+++ b/html/dev/text.html
@@ -1,7 +1,7 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$raw-title" /> <small><a id="save">Fork</a></small></h1>
 	<div id="row" class="rel">
-		<textarea id="text" autofocus="" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="code" rows="48" cols="144" class="abs fullwidth">$code</textarea>
+		<textarea id="text" autofocus="" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="code" rows="48" cols="144" class="abs fullwidth" property="codeSampleType">$code</textarea>
 		<div class="fullheight"></div>
 	</div>
 </section>
