Init pingsug in answers

--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -32,6 +32,7 @@
 </div>
 <div class="indt umar">
 	<div id="comments-$id" class="comments">$commentstr</div>
+	<div class="pingsug"></div>
 	<form id="editcomment-$id" class="editcommentform umar" hidden="">
 		<textarea id="comment-edit-ta-$id" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Edit</button>
