--- a/html/dev/program.html
+++ b/html/dev/program.html
@@ -16,11 +16,13 @@
 	</div>
 	<div id="comments" class="umar">$comments</div>
 	<form id="editcomment" class="umar" hidden="">
+		<div class="pingsug"></div>
 		<textarea id="comment-edit-ta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Edit</button>
 		<button type="reset" id="c-edit-reset">Cancel</button>
 	</form>
 	<form id="comment" class="target umar">
+		<div class="pingsug"></div>
 		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Post</button>
 		<button type="reset" id="c-reset">Cancel</button>
