Add answer deletion, fix #298

--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -1,4 +1,4 @@
-<div property="suggestedAnswer" typeof="Answer">
+<div property="suggestedAnswer" typeof="Answer" class="">
 	<div id="a$id" class="answer hglt pad br">
 		<div class="ctrl pad lft">
 			<a class="up" title="This answers the question well."><svg class="blk up" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,1 1,19 19,19" /></svg></a>
