edit comment → edit summary

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -50,7 +50,7 @@
 		<h3 class="nomar">Tags:</h3>
 		<div id="edit-tags">$edit-tags</div>
 		<input type="hidden" id="edit-tags-input" value="$raw-edit-tags" />
-		<label class="edit-comment"><strong>Edit Comment:</strong> <input type="text" id="q-edit-comment" class="fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></label>
+		<label class="edit-summary"><strong>Edit Summary:</strong> <input type="text" id="q-edit-summary" class="fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></label>
 		<div class="bumar">
 			<button type="submit">Submit Edit</button>
 			<button type="reset" id="cancel-edit">Cancel</button>
