--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -25,7 +25,7 @@
 		</div>
 		<form class="a-edit indt" hidden="">
 			<textarea rows="24" minlength="144">$body-html</textarea>
-			<label class="edit-comment"><strong>Edit Comment:</strong> <input type="text" class="a-edit-comment fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></label>
+			<label class="edit-summary"><strong>Edit Summary:</strong> <input type="text" class="a-edit-summary fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></label>
 			<div>
 				<button type="submit">Submit Edit</button>
 				<button type="reset" class="cancel-edit">Cancel</button>
