Remove slash at end of lesson path

--- a/html/learn/lessonpreview.html
+++ b/html/learn/lessonpreview.html
@@ -7,7 +7,7 @@
 			<div id="checker">
 				<button type="button" id="check" class="blk">Test User Submit</button>
 				<div id="passed" class="passed clearfix">
-					<h2><span id="passtext"> </span> <small class="rit"><a href="../2/">Move on →</a></small></h2>
+					<h2><span id="passtext"> </span> <small class="rit"><a href="2">Move on →</a></small></h2>
 				</div>
 				<div id="failed" class="failed clearfix">
 					<h2>Try Again</h2>
