--- a/html/learn/web/basic-elements/2.html
+++ b/html/learn/web/basic-elements/2.html
@@ -8,14 +8,14 @@ Headings - Basic Elements
 			<p>To move on, write all the possible header tags from most to least important and give each of them some text content.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="../3/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="3">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../1/" class="lft">Back</a> <a href="../3/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
