--- a/html/learn/web/basic-elements/4.html
+++ b/html/learn/web/basic-elements/4.html
@@ -11,14 +11,14 @@ Links - Basic Elements
 			<p>To move on, write a link to <code>https://devdoodle.net</code> with any text you want.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="../5/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="5">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../3/" class="lft">Back</a> <a href="../5/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="3" class="lft">Back</a> <a href="5" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
