--- a/html/learn/web/html-intro/1.html
+++ b/html/learn/web/html-intro/1.html
@@ -8,14 +8,14 @@ Intro to HTML
 			<p>Shown on the right or bottom is a basic HTML file and its output. You don't need to understand it yet - click "next" to learn more.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="../2/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="2">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../.." class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="../.." class="lft">Back</a> <a href="2" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
