--- a/html/learn/web/html-intro/3.html
+++ b/html/learn/web/html-intro/3.html
@@ -26,14 +26,14 @@ Tags and Page Setup - Intro to HTML
 			<p>To move on, write the basic page with a doctype and html, head, and body elements. You may refer to the example above.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="../4/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="4">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../2/" class="lft">Back</a> <a href="../4/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="2" class="lft">Back</a> <a href="4" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
