--- a/html/learn/web/html-intro/2.html
+++ b/html/learn/web/html-intro/2.html
@@ -10,14 +10,14 @@ Using a Doctype - Intro to HTML
 			<p>To move on, add a doctype to the code area.</p>
 			<button id="check" class="blk" onclick="submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="../3/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="3">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../1/" class="lft">Back</a> <a href="../3/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
