Set up slide edit page, fix html() \r bug

--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="cntrls" class="justify"><a href="$back">Back</a> <a href="./">Course-Info</a> <a href="$next">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="$back">Back</a> <a href="./">Course Info</a> <a href="?edit">Edit Slide✎</a> <a href="$next">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
