--- a/html/learn/web/html-intro/5.html
+++ b/html/learn/web/html-intro/5.html
@@ -21,7 +21,7 @@ Intro to HTML Recap
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="4" class="lft">Back</a> <a href="../../basic-elements/" class="rit">Next ❯</a></div>
+		<div id="cntrls" class="flexcont"><a href="4" class="lft">Back</a> <a href="../../basic-elements/" class="rit">Next ❯</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
