--- a/html/learn/web/basic-elements/2.html
+++ b/html/learn/web/basic-elements/2.html
@@ -15,7 +15,7 @@ Headings - Basic Elements
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
