--- a/html/learn/web/basic-elements/3.html
+++ b/html/learn/web/basic-elements/3.html
@@ -16,7 +16,7 @@ Comments - Basic Elements
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="2" class="lft">Back</a> <a href="4" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="2" class="lft">Back</a> <a href="4" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
