--- a/html/learn/web/basic-elements/6.html
+++ b/html/learn/web/basic-elements/6.html
@@ -19,7 +19,7 @@ Emphasis - Basic Elements
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="5" class="lft">Back</a> <a href="#" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="5" class="lft">Back</a> <a href="#" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
