--- a/html/learn/web/html-intro/2.html
+++ b/html/learn/web/html-intro/2.html
@@ -17,7 +17,7 @@ Using a Doctype - Intro to HTML
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="1" class="lft">Back</a> <a href="3" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
