--- a/html/learn/web/html-intro/3.html
+++ b/html/learn/web/html-intro/3.html
@@ -33,7 +33,7 @@ Tags and Page Setup - Intro to HTML
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="2" class="lft">Back</a> <a href="4" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="2" class="lft">Back</a> <a href="4" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
