--- a/html/learn/web/html-intro/4.html
+++ b/html/learn/web/html-intro/4.html
@@ -34,7 +34,7 @@ Your first webpage - Intro to HTML
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="3" class="lft">Back</a> <a href="5" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href="3" class="lft">Back</a> <a href="5" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
