Question search, fix #126

--- a/html/a/head.html
+++ b/html/a/head.html
@@ -35,7 +35,7 @@
 					><nav>
 						<a href="/qa/ask"><span>Ask</span></a>
 						<a href="/qa/tips/"><span>Tips</span></a>
-						<a href="/qa/search/"><span>Search</span></a>
+						<a href="/qa/search"><span>Search</span></a>
 					</nav
 				><spacer></spacer></a>
 			</div>
