Fix chat layout & overflow

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -1,5 +1,5 @@
 <div id="chat-div">
-	<div id="chat" class="lft hglt pad scrly"></div>
+	<div class="rel hglt pad scrly" id="chat-outer"><div id="chat"></div></div>
 	<aside id="aside" class="scrl">
 		<div id="roominfo">
 			<h1><span id="name">$name</span> $options</h1>
