--- a/html/a/foot.html
+++ b/html/a/foot.html
@@ -1,4 +1,4 @@
-
+<!-- htmlhint tag-pair: false -->
 		</main>
 		<footer id="footer" class="center-align">
 			<a href="//meta.devdoodle.net/">Meta</a> <line /> <a href="//meta.devdoodle.net/faq/">FAQ</a> <line /> <a href="/about">About Us</a> <line /> <a href="/legal/tos">Terms of use</a> <line /> <a href="/legal/privacy">Privacy policy</a> <line /> <a href="mailto:support@devdoodle.net">Contact</a>
