--- a/html/a/head.html
+++ b/html/a/head.html
@@ -1,3 +1,4 @@
+<!-- htmlhint tag-pair: false -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
@@ -9,11 +10,11 @@
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="stylesheet" href="/a/main.css" />
 		$inhead
-		<script src="/a/main.js"></script>
 		<title>$title</title>
 	</head>
 	<body class="preload" vocab="https://schema.org/">
 		<noscript>JavaScript is required to view this site.</noscript>
+		<script src="/a/main.js"></script>
 		<nav id="nav">
 			<div>
 				<a id="logo" href="/">
