--- a/html/learn/web/html-intro/2.html
+++ b/html/learn/web/html-intro/2.html
@@ -8,7 +8,7 @@ Using a Doctype - Intro to HTML
 			<code class="blk">&lt;!DOCTYPE html></code>
 			<p>This tells the browser that the page is in HTML5 (the latest version of HTML). There are other doctypes, but we will just be using this one for this tutorial.</p>
 			<p>To move on, add a doctype to the code area.</p>
-			<button id="check" class="blk" onclick="submit()">Submit</button>
+			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2><span id="passtext"> </span> <small class="rit"><a href="3">Move on →</a></small></h2>
 			</div>
