--- a/html/learn/web/html-intro/5.html
+++ b/html/learn/web/html-intro/5.html
@@ -12,7 +12,7 @@ Intro to HTML Recap
 				<li>The basic HTML document consists of a doctype, a root html element, and head and body sections. Metadata like the page title goes in the head element, while visible content like paragraphs go in the body element</li>
 			</ul>
 			<p>Next, we'll learn more about tags, and how to format text.</p>
-			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
+			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2><span id="passtext"> </span> <small class="rit"><a href="../../basic-elements/">Move on →</a></small></h2>
 			</div>
