--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -8,7 +8,7 @@ Paragraphs - Basic Elements
 			<p>As we alreadly learned, body text can be put inside paragraph elements (wrapped in <code>&lt;p></code> and <code>&lt;/p></code>). It looks like this: </p>
 			<code class="blk">&lt;p>This is a paragraph.&lt;/p></code>
 			<p>To move on, create a paragraph element inside the document body with any text you like.</p>
-			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
+			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2><span id="passtext"> </span> <small class="rit"><a href="2">Move on →</a></small></h2>
 			</div>
