--- a/html/mod/suggested-edit.html
+++ b/html/mod/suggested-edit.html
@@ -5,7 +5,7 @@
 		$diff
 		<div class="actions"><div class="side-diff-a nohide center-text"><a>Use original</a></div><div class="side-diff-b nohide center-text"><a>Use suggestion</a></div></div>
 	</div>
-	<form class="edit-original indt" hidden=""><!-- Modify this to work with both questions and answers -->
+	<form class="edit-original indt" hidden=""><!-- TODO: Modify this to work with both questions and answers -->
 		<textarea rows="24" minlength="144">$body-html</textarea>
 		<label class="edit-summary"><strong>Edit Summary:</strong> <input type="text" class="a-edit-summary fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></label>
 		<div class="bumar">
