Finish basic elements lesson, learn bug fixes

--- a/html/learn/web/html-intro/1.html
+++ b/html/learn/web/html-intro/1.html
@@ -15,7 +15,7 @@ Intro to HTML
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls" class="flexcont"><a href="../.." class="lft">Back</a> <a href="2" class="rit">Next</a></div>
+		<div id="cntrls" class="flexcont"><a href=".." class="lft">Back</a> <a href="2" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
