Add more web lessons

--- a/html/learn/web/basic-elements/6.html
+++ b/html/learn/web/basic-elements/6.html
@@ -12,7 +12,7 @@ Emphasis - Basic Elements
 			<p>To move on, use first the <code>&lt;em></code> element, then the <code>&lt;strong></code> element. Both can contain any text you want.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2><span id="passtext"> </span> <small class="rit"><a href="#">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="7">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
