--- a/html/learn/web/basic-elements/7.html
+++ b/html/learn/web/basic-elements/7.html
@@ -23,7 +23,7 @@ Basic Elements Recap
 				<p id="fail"> </p>
 			</div>
 		</div>
-		<div id="cntrls" class="flexcont"><a href="4" class="lft">Back</a> <a href="../../basic-elements/" class="rit">Next ❯</a></div>
+		<div id="cntrls" class="flexcont"><a href="4" class="lft">Back</a> <a href="../nesting/" class="rit">Next ❯</a></div>
 	</div>
 	<div id="ide">
 		<div id="html" class="ta-cont">
